--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <i class="ph ph-basket logo-icon"></i>
         <div>FreshBasket Market</div>
     </div>
-    <nav>
+    <nav class="nav-container">
         <ul class="nav-items">
             <li class="nav-item"><a href="#">How it works</a></li>
             <li class="nav-item"><a href="#">Shop by aisle</a></li>
@@ -27,6 +27,17 @@
    <!-- sign up button -->
     <a href="#" class="primary-btn">Sign Up </a>
    </header>
+   <div class="dropdown">
+    <div class="arrow"><i class="ph ph-caret-down"></i></div>
+    <div class="dropmenu">
+         <ul class="menu-items">
+            <li class="menu-item"><a href="#">How it works</a></li>
+            <li class="menu-item"><a href="#">Shop by aisle</a></li>
+            <li class="menu-item"><a href="#">Why customers love us</a></li>
+        </ul>
+    </div>
+   
+   </div>
    <!-- Main Section -->
     <main>
         <!-- Hero section -->
